generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ============================================
// ENUMS - Aligned with QA Engine
// ============================================

enum JobStatus {
  pending
  running
  completed
  failed
  cancelled
}

enum JobEventType {
  test_started
  turn_started
  screenshot_taken
  bugs_detected
  action_planned
  action_executed
  turn_completed
  test_completed
  test_error
}

// ============================================
// MODELS
// ============================================

/// User profile - extends Supabase auth.users
model Profile {
  id        String   @id @db.Uuid
  email     String?
  fullName  String?  @map("full_name")
  avatarUrl String?  @map("avatar_url")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  sites Site[]

  @@map("profiles")
}

/// Website being tested
model Site {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  name      String
  baseUrl   String   @map("base_url")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  user  Profile @relation(fields: [userId], references: [id], onDelete: Cascade)
  pages Page[]

  @@index([userId])
  @@map("sites")
}

/// Individual page within a site
model Page {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  siteId    String   @map("site_id") @db.Uuid
  path      String
  title     String?
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at")

  site Site  @relation(fields: [siteId], references: [id], onDelete: Cascade)
  jobs Job[]

  @@unique([siteId, path])
  @@index([siteId])
  @@map("pages")
}

/// Test job run on a page
model Job {
  id          String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  pageId      String    @map("page_id") @db.Uuid
  status      JobStatus @default(pending)

  // Configuration
  maxTurns    Int       @default(50) @map("max_turns")

  // UI-friendly fields (actively managed by worker)
  progress    Int       @default(0)
  currentStep String?   @map("current_step")

  // Completion metadata
  completionReason    String?  @map("completion_reason")
  errorMessage        String?  @map("error_message")

  // Latest screenshot (denormalized for quick access)
  latestScreenshotUrl String?  @map("latest_screenshot_url")

  // Finding counts (denormalized for performance - using qa-runner's 4 levels)
  findingsCritical    Int      @default(0) @map("findings_critical")
  findingsHigh        Int      @default(0) @map("findings_high")
  findingsMedium      Int      @default(0) @map("findings_medium")
  findingsLow         Int      @default(0) @map("findings_low")

  // Timestamps
  startedAt   DateTime? @map("started_at")
  completedAt DateTime? @map("completed_at")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @default(now()) @updatedAt @map("updated_at")

  page   Page       @relation(fields: [pageId], references: [id], onDelete: Cascade)
  events JobEvent[]

  @@index([pageId])
  @@index([status])
  @@index([createdAt(sort: Desc)])
  @@map("jobs")
}

/// Event sourcing model - captures all QA runner events
model JobEvent {
  id        String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  jobId     String       @map("job_id") @db.Uuid
  type      JobEventType
  turn      Int          // Turn number when event occurred
  timestamp DateTime     @default(now())

  // test_started event fields
  url      String?
  maxTurns Int?    @map("max_turns")

  // screenshot_taken event fields
  screenshotUrl  String? @map("screenshot_url")
  screenshotSize Int?    @map("screenshot_size")

  // bugs_detected event fields
  findings      Json? // Array of Finding objects: [{description, category, severity, location, detectedAtTurn}]
  totalFindings Int?  @map("total_findings")

  // action_planned event fields
  action    String?
  reasoning String?
  complete  Boolean?

  // action_executed event fields
  success Boolean?
  error   String?

  // test_completed event fields
  result Json? // Full TestResult object: {url, success, totalTurns, findings[], actionLog[], completionReason, error?, startedAt, completedAt}

  // test_error event fields
  partialResult Json? @map("partial_result") // Partial TestResult if available

  job Job @relation(fields: [jobId], references: [id], onDelete: Cascade)

  @@index([jobId])
  @@index([type])
  @@index([turn])
  @@index([timestamp])
  @@map("job_events")
}

// ============================================
// MARKETING / LANDING PAGE (isolated)
// ============================================

/// Beta waitlist signups from landing page
model WaitlistEntry {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  email     String   @unique
  source    String   @default("landing")
  createdAt DateTime @default(now()) @map("created_at")

  @@index([createdAt(sort: Desc)])
  @@map("waitlist")
}

/// Contact form submissions from landing page
model ContactMessage {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name      String?
  email     String
  message   String
  createdAt DateTime @default(now()) @map("created_at")

  @@index([createdAt(sort: Desc)])
  @@map("contact_messages")
}
